[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "24.0.0"
anyhow = "1.0.86"
rand = "0.8.5"
reqwest = "0.12.7"
uuid = { version = "1.10.0", features = ["v4"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = "1.0.209"

[dev-dependencies]
axum = "0.7.5"

[workspace]
members = ["crates/*"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
